<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lamp</string>
    <string name="subtitle">Magic Lantern</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="forget">Forget lamp</string>
    <string name="turn_on_bt">Turn on Bluetooth</string>
    <string name="scan_hint">Power the lamp, then tap Scan. It is remembered after the first connect. Long-press to forget it.</string>
    <string name="no_bluetooth">No Bluetooth on this unit</string>
    <string name="bt_off">Bluetooth is off</string>
    <string name="idle">Not connected</string>
    <string name="scanning">Scanning…</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="no_lamps">No lamp found</string>
    <string name="perm_needed">Bluetooth permission refused</string>
    <string name="power">Power</string>
    <string name="colour">Colour</string>
    <string name="brightness">Brightness</string>
    <string name="effects">Effects</string>
    <string name="effect">Effect</string>
    <string name="prev_effect">Previous effect</string>
    <string name="next_effect">Next effect</string>
    <string name="auto">Auto</string>
    <string name="speed">Speed</string>
    <string name="music">Music</string>
    <string name="music_hint">Lamp listens on its own microphone.</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="colour_red">Red</string>
    <string name="colour_orange">Orange</string>
    <string name="colour_yellow">Yellow</string>
    <string name="colour_green">Green</string>
    <string name="colour_cyan">Cyan</string>
    <string name="colour_blue">Blue</string>
    <string name="colour_purple">Purple</string>
    <string name="colour_white">White</string>
</resources>
